cmake_minimum_required(VERSION 3.25)

set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_LIST_DIR}/CMakeToolchainDeluge.txt)

project(DelugeFirmware LANGUAGES CXX C ASM)

add_executable(DelugeFirmware)

string(TOLOWER ${CMAKE_BUILD_TYPE} build_type)
if (build_type STREQUAL oled-debug)
    target_compile_definitions(DelugeFirmware PRIVATE
        "-DHAVE_OLED"
    )
    target_compile_options(DelugeFirmware PRIVATE
        "-Og"
        "-g"
    )
endif()

if (build_type STREQUAL oled-release)
    target_compile_definitions(DelugeFirmware PRIVATE
        "-DHAVE_OLED"
        "-DNDEBUG"
    )
    target_compile_options(DelugeFirmware PRIVATE
        "-flto"
        "-O2"
        "-s"
    )
endif()
if (build_type STREQUAL 7seg-debug)
    target_compile_options(DelugeFirmware PRIVATE
        "-Og"
        "-g"
    )
endif()
if (build_type STREQUAL 7seg-release)
    target_compile_definitions(DelugeFirmware PRIVATE
        "-DNDEBUG"
    )
    target_compile_options(DelugeFirmware PRIVATE
        "-flto"
        "-O2"
        "-s"
    )
endif()

add_custom_command(TARGET DelugeFirmware POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Oihex DelugeFirmware DelugeFirmware.hex VERBATIM)
add_custom_command(TARGET DelugeFirmware POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Obinary DelugeFirmware DelugeFirmware.bin VERBATIM)

target_sources(DelugeFirmware PUBLIC
    src/fatfs/ff.c
    src/fatfs/ffsystem.c
    src/fatfs/ffunicode.c
    src/drivers/RZA1/usb/r_usb_hmidi/src/r_usb_hmidi_api.c
    src/drivers/RZA1/usb/r_usb_hmidi/src/r_usb_hmidi_driver.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hcontrolrw.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_peptable.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hhubsys.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pstdrequest.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_plibusbip.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pstdfunction.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_usbif_api.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hmanager.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pbc.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pcontrolrw.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pinthandler_usbip0.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hinthandler_usbip1.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hlibusbip.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hbc.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hinthandler_usbip0.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pintfifo.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_clibusbip.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_cdataio.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hintfifo.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hscheduler.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hdriver.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_pdriver.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_psignal.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hstdfunction.c
    src/drivers/RZA1/usb/r_usb_basic/src/driver/r_usb_hsignal.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_hreg_abs.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_rz_mcu.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_hostelectrical.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_preg_abs.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_creg_access.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_preg_access.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_creg_abs.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_dma.c
    src/drivers/RZA1/usb/r_usb_basic/src/hw/r_usb_hreg_access.c
    src/drivers/RZA1/usb/USBConnection.c
    src/drivers/RZA1/uart/sio_char.c
    src/drivers/RZA1/cache/cache.c
    src/drivers/RZA1/stb/stb.c
    src/drivers/RZA1/system/rza_io_regrw.c
    src/drivers/RZA1/mtu/mtu.c
    src/drivers/RZA1/gpio/gpio.c
    src/drivers/RZA1/compiler/asm/l1_cache_init.S
    src/drivers/RZA1/compiler/asm/access.S
    src/drivers/RZA1/compiler/asm/initsct.S
    src/drivers/RZA1/compiler/asm/reset_handler.S
    src/drivers/RZA1/compiler/asm/ttb_init.S
    src/drivers/RZA1/compiler/asm/isr.S
    src/drivers/RZA1/compiler/asm/start.S
    src/drivers/RZA1/compiler/asm/irqfiq_handler.S
    src/drivers/All_CPUs/invalidate.S
    src/drivers/RZA1/bsc/bsc_userdef.c
    src/drivers/RZA1/ssi/ssi.c
    src/drivers/RZA1/sdhi/userdef/sd_dev_low.c
    src/drivers/RZA1/sdhi/userdef/sd_dev_dmacdrv.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_util.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_direct.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_trns.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_read.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_int.c
    src/drivers/RZA1/sdhi/src/sd/sdio/sdio_write.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_util.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_mount.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_trns.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_cd.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_cmd.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_upcase_table.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_write.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_int.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_format.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_init.c
    src/drivers/RZA1/sdhi/src/sd/access/sd_read.c
    src/drivers/RZA1/diskio.c
    src/drivers/RZA1/oled/oled_low_level.c
    src/drivers/RZA1/intc/intc_handler.c
    src/drivers/RZA1/intc/intc_userdef.c
    src/drivers/RZA1/intc/intc.c
    src/drivers/RZA1/spibsc/spibsc_ioset_drv.c
    src/drivers/RZA1/spibsc/spibsc_flash_userdef.c
    src/drivers/RZA1/spibsc/spibsc_flash_api.c
    src/drivers/RZA1/spibsc/spibsc_ioset_userdef.c
    src/drivers/RZA1/spibsc/spibsc_ioset_api.c
    src/drivers/RZA1/spibsc/spibsc_Deluge_setup.c
    src/drivers/RZA1/peripheral_init_basic.c
    src/drivers/RZA1/rspi/rspi.c
    src/drivers/All_CPUs/sd_all_cpus.c
    src/drivers/All_CPUs/ssi_all_cpus/ssi_all_cpus.c
    src/drivers/All_CPUs/rspi_all_cpus/rspi_all_cpus.c
    src/drivers/All_CPUs/uart_all_cpus/uart_all_cpus.c
    src/drivers/All_CPUs/oled_low_level_all_cpus/oled_low_level_all_cpus.c
    src/drivers/All_CPUs/oled_low_level_all_cpus/fonts.c
    src/drivers/All_CPUs/dmac/dmac.c
    src/NE10/modules/dsp/NE10_fft_int32.c
    src/NE10/modules/dsp/NE10_init_dsp.c
    src/NE10/modules/dsp/NE10_fft_generic_int32.neonintrinsic.cpp
    src/NE10/modules/dsp/NE10_fft.c
    src/NE10/modules/dsp/NE10_fir_init.c
    src/NE10/modules/dsp/NE10_fft_int32.neonintrinsic.c
    src/NE10/modules/dsp/NE10_fft_generic_int32.cpp
    src/NE10/modules/NE10_init.c
    src/NE10/common/NE10_mask_table.c
    src/RTT/SEGGER_RTT.c
    src/RTT/SEGGER_RTT_ASM_ARMv7M.S
    src/RTT/SEGGER_RTT_printf.c
    src/Action.cpp
    src/ActionClipState.cpp
    src/ActionLogger.cpp
    src/Arpeggiator.cpp
    src/Arrangement.cpp
    src/ArrangerView.cpp
    src/AudioClip.cpp
    src/AudioClipView.cpp
    src/AudioEngine.cpp
    src/AudioFile.cpp
    src/AudioFileHolder.cpp
    src/AudioFileManager.cpp
    src/AudioFileReader.cpp
    src/AudioFileVector.cpp
    src/AudioInputSelector.cpp
    src/AudioOutput.cpp
    src/AudioRecorder.cpp
    src/AutoParam.cpp
    src/AutomatedTester.cpp
    src/BidirectionalLinkedList.cpp
    src/Browser.cpp
    src/Buttons.cpp
    src/CStringArray.cpp
    src/CVEngine.cpp
    src/CVInstrument.cpp
    src/Clip.cpp
    src/ClipArray.cpp
    src/ClipInstance.cpp
    src/ClipInstanceVector.cpp
    src/ClipMinder.cpp
    src/ClipNavigationTimelineView.cpp
    src/ClipView.cpp
    src/Cluster.cpp
    src/ClusterPriorityQueue.cpp
    src/Consequence.cpp
    src/ConsequenceArrangerParamsTimeInserted.cpp
    src/ConsequenceAudioClipSetSample.cpp
    src/ConsequenceBeginPlayback.cpp
    src/ConsequenceClipBeginLinearRecord.cpp
    src/ConsequenceClipExistence.cpp
    src/ConsequenceClipInstanceChange.cpp
    src/ConsequenceClipInstanceExistence.cpp
    src/ConsequenceClipLength.cpp
    src/ConsequenceInstrumentClipHorizontalShift.cpp
    src/ConsequenceInstrumentClipMultiply.cpp
    src/ConsequenceNoteArrayChange.cpp
    src/ConsequenceNoteExistence.cpp
    src/ConsequenceNoteRowHorizontalShift.cpp
    src/ConsequenceNoteRowLength.cpp
    src/ConsequenceNoteRowMute.cpp
    src/ConsequenceOutputExistence.cpp
    src/ConsequenceParamChange.cpp
    src/ConsequenceScaleAddNote.cpp
    src/ConsequenceSwingChange.cpp
    src/ConsequenceTempoChange.cpp
    src/ContextMenu.cpp
    src/ContextMenuDeleteFile.cpp
    src/ContextMenuLoadInstrumentPreset.cpp
    src/ContextMenuOverwriteBootloader.cpp
    src/ContextMenuOverwriteFile.cpp
    src/ContextMenuSampleBrowserKit.cpp
    src/ContextMenuSampleBrowserSynth.cpp
    src/CopiedNoteRow.cpp
    src/CopiedParamAutomation.cpp
    src/DString.cpp
    src/Delay.cpp
    src/DelayBuffer.cpp
    src/Deluge.cpp
    src/DrumName.cpp
    src/EarlyNoteArray.cpp
    src/Encoders.cpp
    src/FFTConfigManager.cpp
    src/FileItem.cpp
    src/FilterSet.cpp
    src/FilterSetConfig.cpp
    src/FlashStorage.cpp
    src/GateDrum.cpp
    src/GeneralMemoryAllocator.cpp
    src/GlobalEffectable.cpp
    src/GlobalEffectableForClip.cpp
    src/GlobalEffectableForSong.cpp
    src/HardwareTesting.cpp
    src/ImpulseResponseProcessor.cpp
    src/IndicatorLEDs.cpp
    src/InstrumentClip.cpp
    src/InstrumentClipMinder.cpp
    src/InstrumentClipView.cpp
    src/KeyboardScreen.cpp
    src/LearnedMIDI.cpp
    src/LiveInputBuffer.cpp
    src/LivePitchShifter.cpp
    src/LivePitchShifterPlayHead.cpp
    src/LoadInstrumentPresetUI.cpp
    src/LoadUI.cpp
    src/MIDIDevice.cpp
    src/MIDIDeviceManager.cpp
    src/MIDIDrum.cpp
    src/MIDIInstrument.cpp
    src/MIDIParam.cpp
    src/MIDIParamCollection.cpp
    src/MIDIParamVector.cpp
    src/MelodicInstrument.cpp
    src/MemoryRegion.cpp
    src/MenuItem.cpp
    src/MenuItemAudioClipSampleMarkerEditor.cpp
    src/MenuItemColour.cpp
    src/MenuItemDecimal.cpp
    src/MenuItemDrumName.cpp
    src/MenuItemFileSelector.cpp
    src/MenuItemInteger.cpp
    src/MenuItemIntegerRange.cpp
    src/MenuItemKeyRange.cpp
    src/MenuItemMIDIDevices.cpp
    src/MenuItemMPEDirectionSelector.cpp
    src/MenuItemMPEZoneNumMemberChannels.cpp
    src/MenuItemMPEZoneSelector.cpp
    src/MenuItemMidiCommand.cpp
    src/MenuItemMultiRange.cpp
    src/MenuItemNumber.cpp
    src/MenuItemParam.cpp
    src/MenuItemPatchCableStrength.cpp
    src/MenuItemPatchedParam.cpp
    src/MenuItemRange.cpp
    src/MenuItemSampleLoopPoint.cpp
    src/MenuItemSelection.cpp
    src/MenuItemSourceSelection.cpp
    src/MenuItemSubmenu.cpp
    src/MenuItemSyncLevel.cpp
    src/MenuItemUnpatchedParam.cpp
    src/MenuItemValue.cpp
    src/MenuItemWithCCLearning.cpp
    src/Metronome.cpp
    src/MidiKnobArray.cpp
    src/ModControllable.cpp
    src/ModControllableAudio.cpp
    src/ModelStack.cpp
    src/MultiRange.cpp
    src/MultiRangeArray.cpp
    src/MultiWaveTableRange.cpp
    src/MultisampleRange.cpp
    src/NamedThingVector.cpp
    src/NonAudioDrum.cpp
    src/NonAudioInstrument.cpp
    src/Note.cpp
    src/NoteRow.cpp
    src/NoteRowVector.cpp
    src/NoteVector.cpp
    src/NumericLayer.cpp
    src/NumericLayerBasicText.cpp
    src/NumericLayerLoadingAnimation.cpp
    src/NumericLayerScrollTransition.cpp
    src/NumericLayerScrollingText.cpp
    src/OpenAddressingHashTable.cpp
    src/OrderedResizeableArray.cpp
    src/OrderedResizeableArrayWithMultiWordKey.cpp
    src/Output.cpp
    src/PadLEDs.cpp
    src/ParamCollection.cpp
    src/ParamManager.cpp
    src/ParamNode.cpp
    src/ParamNodeVector.cpp
    src/ParamSet.cpp
    src/PatchCable.cpp
    src/PatchCableSet.cpp
    src/PlaybackMode.cpp
    src/Positionable.cpp
    src/QuickSorter.cpp
    src/QwertyUI.cpp
    src/RenameDrumUI.cpp
    src/RenameOutputUI.cpp
    src/RenameUI.cpp
    src/ResizeableArray.cpp
    src/ResizeablePointerArray.cpp
    src/RootUI.cpp
    src/Sample.cpp
    src/SampleCache.cpp
    src/SampleCluster.cpp
    src/SampleClusterArray.cpp
    src/SampleControls.cpp
    src/SampleHolder.cpp
    src/SampleHolderForClip.cpp
    src/SampleHolderForVoice.cpp
    src/SampleLowLevelReader.cpp
    src/SampleMarkerEditor.cpp
    src/SamplePercCacheZone.cpp
    src/SamplePlaybackGuide.cpp
    src/SampleReader.cpp
    src/SampleRecorder.cpp
    src/SaveSongOrInstrumentContextMenu.cpp
    src/SaveSongUI.cpp
    src/SaveUI.cpp
    src/Session.cpp
    src/SessionView.cpp
    src/Slicer.cpp
    src/SlotBrowser.cpp
    src/Stealable.cpp
    src/TimeStretcher.cpp
    src/TimelineCounter.cpp
    src/TimelineView.cpp
    src/UI.cpp
    src/View.cpp
    src/VoiceSample.cpp
    src/VoiceVector.cpp
    src/WaveTable.cpp
    src/WaveTableBandData.cpp
    src/WaveTableHolder.cpp
    src/WaveTableReader.cpp
    src/WaveformBasicNavigator.cpp
    src/WaveformRenderer.cpp
    src/allpass.cpp
    src/cfunctions.c
    src/comb.cpp
    src/compressor.cpp
    src/contextmenuclearsong.cpp
    src/drum.cpp
    src/encoder.cpp
    src/envelope.cpp
    src/functions.cpp
    src/instrument.cpp
    src/kit.cpp
    src/lfo.cpp
    src/loadsongui.cpp
    src/lookuptables.cpp
    src/lookuptables_analog_square.cpp
    src/lookuptables_mystery_synth_a_saw.cpp
    src/lookuptables_mystery_synth_b_saw.cpp
    src/lookuptables_saw.cpp
    src/lookuptables_square.cpp
    src/matrixdriver.cpp
    src/main.c
    src/midiengine.cpp
    src/numericdriver.cpp
    src/oled.cpp
    src/patcher.cpp
    src/phaseincrementfinetuner.cpp
    src/playbackhandler.cpp
    src/r_usb_pmidi_descriptor.c
    src/resetprg.c
    src/revmodel.cpp
    src/samplebrowser.cpp
    src/saveinstrumentpresetui.cpp
    src/song.cpp
    src/sound.cpp
    src/sounddrum.cpp
    src/soundeditor.cpp
    src/soundinstrument.cpp
    src/source.cpp
    src/storagemanager.cpp
    src/uart.cpp
    src/uitimermanager.cpp
    src/voice.cpp
    src/voicesampleplaybackguide.cpp
    src/voiceunisonpart.cpp
    src/voiceunisonpartsource.cpp
)

target_include_directories(DelugeFirmware PUBLIC
    src
    src/NE10/common
    src/NE10/inc
    src/NE10/modules
    src/drivers/All_CPUs
    src/drivers/All_CPUs/dmac
    src/drivers/All_CPUs/dmac
    src/drivers/All_CPUs/oled_low_level_all_cpus
    src/drivers/All_CPUs/rspi_all_cpus
    src/drivers/All_CPUs/ssi_all_cpus
    src/drivers/All_CPUs/uart_all_cpus
    src/drivers/All_CPUs/usb
    src/drivers/All_CPUs/usb/userdef
    src/drivers/RZA1
    src/drivers/RZA1/bsc
    src/drivers/RZA1/dma
    src/drivers/RZA1/gpio
    src/drivers/RZA1/intc
    src/drivers/RZA1/mtu
    src/drivers/RZA1/oled
    src/drivers/RZA1/rspi
    src/drivers/RZA1/sdhi
    src/drivers/RZA1/sdhi/inc
    src/drivers/RZA1/sdhi/src
    src/drivers/RZA1/sdhi/src/sd
    src/drivers/RZA1/sdhi/src/sd/access
    src/drivers/RZA1/sdhi/src/sd/inc
    src/drivers/RZA1/sdhi/src/sd/inc/access
    src/drivers/RZA1/sdhi/src/sd/sdio
    src/drivers/RZA1/sdhi/userdef
    src/drivers/RZA1/spibsc
    src/drivers/RZA1/ssi
    src/drivers/RZA1/system
    src/drivers/RZA1/system/iobitmasks
    src/drivers/RZA1/system/iodefines
    src/drivers/RZA1/uart
    src/drivers/RZA1/usb/r_usb_basic
    src/drivers/RZA1/usb/r_usb_basic/src
    src/drivers/RZA1/usb/r_usb_basic/src/driver
    src/drivers/RZA1/usb/r_usb_basic/src/driver/inc
    src/drivers/RZA1/usb/r_usb_basic/src/hw
    src/drivers/RZA1/usb/r_usb_basic/src/hw/inc
    src/drivers/RZA1/usb/r_usb_hmidi
    src/drivers/RZA1/usb/r_usb_hmidi/src/inc
    src/drivers/RZA1/usb/userdef
    src/fatfs
)
